rework: front page moving cards

--- a/templates/base/home/index.html
+++ b/templates/base/home/index.html
@@ -21,7 +21,7 @@
             </div>
         </div>
     </div>
-    <div class="m-auto min-h-full max-h-fit p-4">
+    <div class="m-auto max-h-full max-h-fit p-4">
       <div class="grid sm:grid-cols-1 md:grid-cols-3">
         <h1 class="border-b mb-2 border-gray-200 sm:col-start-1 sm:col-end-2 md:col-start-2 md:col-end-3 dark:border-gray-700 text-center text-2xl font-bold pb-2">Welcome to {{'NAME'|get_setting}}</h1>
       </div>
@@ -30,6 +30,8 @@
         <p class="text-center">Freeing up your time to focus on what matters most,</p>
         <p class="text-center">All your needs, all your clients, all your network, secure and readily available.</p>
         <p class="text-center pb-2">Let {{'NAME'|get_setting}} handle it for you.</p>
+    </div>
+
     </div>
     <h1 class="text-4xl text-center md:xl:text-5xl font-bold pb-2">Our core tenets</h1>
     <p class="mb-2 text-center text-xl">What do we value most at {{'NAME'|get_setting}}?</p>
@@ -63,6 +65,158 @@
           </div>
     </div>
 </div>
+<!-- START -->
+<div class="w-screen relative left-1/2 right-1/2 -mx-[50vw] dark:bg-gray-800">
+  <div class="group flex overflow-hidden p-2 [--gap:1rem] [gap:var(--gap)] flex-row md:[--duration:40s] [--duration:30s]">
+     <div class="flex shrink-0 justify-around [gap:var(--gap)] animate-marquee3 flex-row group-hover:[animation-play-state:paused]">
+      <div class="transform hover:-translate-y-2 transition duration-300">
+        <div class="flex justify-center items-center p-4">
+          <div class="w-full max-w-[600px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+              <div class="p-6">
+                <div>
+                    <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Transform Communication with Unmatched Transparency</h2>
+                    <div class="flex items-center text-sm text-gray-800 dark:text-gray-600 mb-2">
+                      <span>Only at {{'NAME'|get_setting}}</span>
+                    </div>
+                    <div class="flex items-center text-sm text-gray-700 dark:text-gray-400 mb-4">
+                      <span><i>Make the most of your customer success</i></span>
+                    </div>
+                    <div class="flex flex-wrap gap-2 mb-4">
+                    <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Team Engagement</span>
+                    <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Remote Collaboration</span>
+                    <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Secure Messaging</span>
+                    <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Multilingual Support</span>
+                  </div>
+                    <div class="mb-4">
+                      <button class="text-gray-500 text-sm w-full text-left focus:outline-none">
+                          <p class="line-clamp-2">Designed for technical teams and client partnerships, it optimizes productivity, enabling clear, organized interactions for successful project execution.</p>
+                          <div class="flex items-center text-pyrl-active dark:text-pyrl-200 hover:text-pyrl-300 dark:hover:text-pyrl-400 mt-2">
+                            <span class="text-xs mr-1">Read more</span>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-down w-4 h-4">
+                                <path d="m6 9 6 6 6-6"></path>
+                            </svg>
+                          </div>
+                      </button>
+                    </div>
+                    <div class="flex flex-wrap gap-2 mb-4">
+                    <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Team Projects</span>
+                    <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Research Initiatives</span>
+                    <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Event Planning</span>
+                    <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Client Collaborations</span>
+                  </div>
+                    <div class="flex justify-end items-center">
+                      <button class="px-4 py-2 bg-pyrl-100 dark:bg-pyrl-active dark:text-pyrl-100 text-pyrl-active text-sm font-medium rounded hover:bg-pyrl-active hover:text-pyrl-100 hover:dark:bg-pyrl-100 hover:dark:text-pyrl-active transition-colors duration-300 flex items-center">
+                          View product
+                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right w-4 h-4 ml-1">
+                            <path d="m9 18 6-6-6-6"></path>
+                          </svg>
+                      </button>
+                    </div>
+                </div>
+              </div>
+          </div>
+        </div>
+    </div>
+        <div class="transform hover:-translate-y-2 transition duration-300">
+           <div class="flex justify-center items-center p-4">
+              <div class="w-full max-w-[600px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+                 <div class="p-6">
+                    <div>
+                       <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Take Project Management to the next level</h2>
+                       <div class="flex items-center text-sm text-gray-800 dark:text-gray-600 mb-2">
+                          <span>Only at {{'NAME'|get_setting}}</span>
+                       </div>
+                       <div class="flex items-center text-sm text-gray-700 dark:text-gray-400 mb-4">
+                        <span><i>New Gen Project Management solution</i></span>
+                       </div>
+                       <div class="flex flex-wrap gap-2 mb-4">
+                        <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Automation</span>
+                        <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Intelligent Charting</span>
+                        <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Customisable Pipelines</span>
+                        <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Budget Control</span>
+                      </div>
+                       <div class="mb-4">
+                          <button class="text-gray-500 text-sm w-full text-left focus:outline-none">
+                             <p class="line-clamp-2">A new, state of the art Project Planning and Management, any project, in any way, at your fingertips. With short setup, dynamic customisation, ready to support any scale.</p>
+                             <div class="flex items-center text-pyrl-active dark:text-pyrl-200 hover:text-pyrl-300 dark:hover:text-pyrl-400 mt-2">
+                                <span class="text-xs mr-1">Read more</span>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-down w-4 h-4">
+                                   <path d="m6 9 6 6 6-6"></path>
+                                </svg>
+                             </div>
+                          </button>
+                       </div>
+                       <div class="flex flex-wrap gap-2 mb-4">
+                        <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Financial Services</span>
+                        <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Manufacturing Logistics</span>
+                        <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Construction Projects</span>
+                        <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Consulting Services</span>
+                      </div>
+                       <div class="flex justify-end items-center">
+                          <button class="px-4 py-2 bg-pyrl-100 dark:bg-pyrl-active dark:text-pyrl-100 text-pyrl-active text-sm font-medium rounded hover:bg-pyrl-active hover:text-pyrl-100 hover:dark:bg-pyrl-100 hover:dark:text-pyrl-active transition-colors duration-300 flex items-center">
+                             View product
+                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right w-4 h-4 ml-1">
+                                <path d="m9 18 6-6-6-6"></path>
+                             </svg>
+                          </button>
+                       </div>
+                    </div>
+                 </div>
+              </div>
+           </div>
+        </div>
+        <div class="transform hover:-translate-y-2 transition duration-300">
+          <div class="flex justify-center items-center p-4">
+             <div class="w-full max-w-[600px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+                <div class="p-6">
+                   <div>
+                      <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Effortless Accounting, Real-Time Insights</h2>
+                      <div class="flex items-center text-sm text-gray-800 dark:text-gray-600 mb-2">
+                         <span>Only at {{'NAME'|get_setting}}</span>
+                      </div>
+                      <div class="flex items-center text-sm text-gray-700 dark:text-gray-400 mb-4">
+                       <span><i>A comprehensive platform for automating expenses, budgets, and financial reports</i></span>
+                      </div>
+                      <div class="flex flex-wrap gap-2 mb-4">
+                       <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Invoice Management</span>
+                       <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Financial Reporting</span>
+                       <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Expense Tracking</span>
+                       <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Balance Sheet</span>
+                     </div>
+                      <div class="mb-4">
+                         <button class="text-gray-500 text-sm w-full text-left focus:outline-none">
+                            <p class="line-clamp-2">An integrated financial tool that simplifies budgeting and invoicing, offering instant insights for informed decision-making.</p>
+                            <div class="flex items-center text-pyrl-active dark:text-pyrl-200 hover:text-pyrl-300 dark:hover:text-pyrl-400 mt-2">
+                               <span class="text-xs mr-1">Read more</span>
+                               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-down w-4 h-4">
+                                  <path d="m6 9 6 6 6-6"></path>
+                               </svg>
+                            </div>
+                         </button>
+                      </div>
+                      <div class="flex flex-wrap gap-2 mb-4">
+                       <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Revenue Tracking</span>
+                       <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Annual Reporting</span>
+                       <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Tax Preparation</span>
+                       <span class="px-2 py-1 bg-gray-200 hover:bg-pyrl-active hover:text-pyrl-100 dark:bg-gray-700 text-gray-400 dark:text-gray-400 text-xs rounded transition ease-in-out duration-300">Financial Audits</span>
+                     </div>
+                      <div class="flex justify-end items-center">
+                         <button class="px-4 py-2 bg-pyrl-100 dark:bg-pyrl-active dark:text-pyrl-100 text-pyrl-active text-sm font-medium rounded hover:bg-pyrl-active hover:text-pyrl-100 hover:dark:bg-pyrl-100 hover:dark:text-pyrl-active transition-colors duration-300 flex items-center">
+                            View product
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right w-4 h-4 ml-1">
+                               <path d="m9 18 6-6-6-6"></path>
+                            </svg>
+                         </button>
+                      </div>
+                   </div>
+                </div>
+             </div>
+          </div>
+       </div>
+     </div>
+  </div>
+</div>
+<!-- EMD -->
 {% endblock %}
 {% block scripts %}
 {% endblock %}
