--- a/templates/base/product_info/communication.html
+++ b/templates/base/product_info/communication.html
@@ -5,12 +5,8 @@
 {% block content %}
 <div class="w-full h-screen">
     <div class="m-auto h-full p-4">
-        <h1 class="border-b border-gray-200 pb-2 dark:border-gray-800 text-center text-5xl sm:text-4xl font-bold">Welcome to {{'NAME'|get_setting}}</h1>
-        <h2 class="text-center text-xl font-semibold">
-            {{'NAME'|get_setting}} is a web application for managing your clients, staff and business relationships.
-        </h2>
-        <p class="pl-24 pr-24">Offering services from multiple industries to pull together an application tailored to your needs.</p>
-        <p class="pl-24 pr-24">View dashoa</p>
+        <h1 class="border-b border-gray-200 pb-2 dark:border-gray-800 text-center text-5xl sm:text-4xl font-bold">Welcome to {{'NAME'|get_setting}} Communications</h1>
+        <p class="pl-24 pr-24">COMMUNICATION PRODUCT PLACEHOLDER</p>
     </div>
 </div>
 {% endblock %}
