--- a/templates/main_app/customers/index.html
+++ b/templates/main_app/customers/index.html
@@ -1,7 +1,8 @@
 {% extends 'main_app/base.html' %}
 {% block content %}
-<div class="p-2 min-w-full min-h-full">
-    <div class="flex flex-col md:flex-row justify-between border-gray-300 dark:border-gray-700 border bg-white dark:bg-gray-800 divide-y rounded-lg flex-none w-full md:w-full p-2 items-center">
+<div class="h-[86.67px] hidden md:block"></div>
+<div class="p-6 max-w-full min-h-full fixed top-[56.67px] bottom-[24px] right-0 left-[255.333px] hidden md:block">
+    <div class="flex flex-col md:flex-row justify-between border-gray-200 dark:border-gray-700 border bg-white dark:bg-gray-800 divide-y rounded-lg flex-none w-full md:w-full p-2 items-center">
             <form class="max-w-md min-w-[50%] xl:min-w-[35%] mx-4 w-full">   
                 <label for="default-search" class="text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>
                 <div class="relative">
@@ -10,18 +11,33 @@
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
                         </svg>
                     </div>
-                    <input type="search" id="default-search" class="block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search Customers..." required />
+                    <input type="search" id="default-search" class="block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-200 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search Customers..." required />
                     <button type="submit" class="text-white absolute end-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Search</button>
                 </div>
             </form>
             <div class="p-2 pt-4 md:pt-2">
                 <a href="#" class="text-white bg-blue-700 hover:bg-blue-800 font-medium rounded-lg text-sm px-4 py-2">Create</a>
             </div>
-    </div>        
+    </div>       
+    <div class="h-full flex flex-col">
+        <div class="flex flex-row gap-6 mt-6 mb-6 grow">
+            <div class="w-full invisible">
+                <p>e</p>
+            </div>
+            <div class="w-full h-full flex flex-col">
+                <div class="bg-white rounded-md border border-gray-200 h-full grow">
+                    <p>eee</p>
+                </div>
+            </div>
+        </div>
+        <div class="h-[103.5px] invisible shrink-0">
+            <p>e</p>
+        </div>
+    </div>
 </div>
-<div class="flex flex-row">
+<div class="flex flex-row mt-0 md:mt-2">
     <div class="flex items-center justify-center p-2 min-w-full md:min-w-[50%]">
-        <div class="flex flex-col border-gray-300 dark:border-gray-700 border bg-white dark:bg-gray-800 divide-y rounded-lg flex-none w-full">
+        <div class="flex flex-col border-gray-200 dark:border-gray-700 border bg-white dark:bg-gray-800 divide-y rounded-lg flex-none w-full">
             <div class="flex flex-col space-y-2 divide-y">
                 {% for customer in customers %}
                 <!-- Item -->
