--- a/templates/base/home/index.html
+++ b/templates/base/home/index.html
@@ -72,7 +72,7 @@
      <div class="flex shrink-0 justify-around [gap:var(--gap)] animate-marquee3 flex-row group-hover:[animation-play-state:paused]">
       <div class="transform hover:-translate-y-2 transition duration-300">
         <div class="flex justify-center items-center p-4">
-          <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+          <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
               <div class="p-6">
                 <div>
                     <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Transform Communication with Unmatched Transparency</h2>
@@ -120,7 +120,7 @@
     </div>
         <div class="transform hover:-translate-y-2 transition duration-300">
            <div class="flex justify-center items-center p-4">
-              <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+              <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
                  <div class="p-6">
                     <div>
                        <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Take Project Management to the next level</h2>
@@ -168,7 +168,7 @@
         </div>
         <div class="transform hover:-translate-y-2 transition duration-300">
           <div class="flex justify-center items-center p-4">
-             <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+             <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
                 <div class="p-6">
                    <div>
                       <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Effortless Accounting, Real-Time Insights</h2>
@@ -217,7 +217,7 @@
        </div>
        <div class="transform hover:-translate-y-2 transition duration-300">
         <div class="flex justify-center items-center p-4">
-           <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+           <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
               <div class="p-6">
                  <div>
                     <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Streamline Inventory and Stock Management</h2>
@@ -268,7 +268,7 @@
     <div class="flex shrink-0 justify-around [gap:var(--gap)] animate-marquee3 flex-row group-hover:[animation-play-state:paused]">
       <div class="transform hover:-translate-y-2 transition duration-300">
         <div class="flex justify-center items-center p-4">
-          <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+          <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
               <div class="p-6">
                 <div>
                     <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Transform Communication with Unmatched Transparency</h2>
@@ -316,7 +316,7 @@
     </div>
         <div class="transform hover:-translate-y-2 transition duration-300">
            <div class="flex justify-center items-center p-4">
-              <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+              <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
                  <div class="p-6">
                     <div>
                        <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Take Project Management to the next level</h2>
@@ -364,7 +364,7 @@
         </div>
         <div class="transform hover:-translate-y-2 transition duration-300">
           <div class="flex justify-center items-center p-4">
-             <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+             <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
                 <div class="p-6">
                    <div>
                       <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Effortless Accounting, Real-Time Insights</h2>
@@ -413,7 +413,7 @@
        </div>
        <div class="transform hover:-translate-y-2 transition duration-300">
         <div class="flex justify-center items-center p-4">
-           <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+           <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
               <div class="p-6">
                  <div>
                     <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Streamline Inventory and Stock Management</h2>
@@ -464,7 +464,7 @@
     <div class="flex shrink-0 justify-around [gap:var(--gap)] animate-marquee3 flex-row group-hover:[animation-play-state:paused]">
       <div class="transform hover:-translate-y-2 transition duration-300">
         <div class="flex justify-center items-center p-4">
-          <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+          <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
               <div class="p-6">
                 <div>
                     <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Transform Communication with Unmatched Transparency</h2>
@@ -512,7 +512,7 @@
     </div>
         <div class="transform hover:-translate-y-2 transition duration-300">
            <div class="flex justify-center items-center p-4">
-              <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+              <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
                  <div class="p-6">
                     <div>
                        <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Take Project Management to the next level</h2>
@@ -560,7 +560,7 @@
         </div>
         <div class="transform hover:-translate-y-2 transition duration-300">
           <div class="flex justify-center items-center p-4">
-             <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+             <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
                 <div class="p-6">
                    <div>
                       <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Effortless Accounting, Real-Time Insights</h2>
@@ -609,7 +609,7 @@
        </div>
        <div class="transform hover:-translate-y-2 transition duration-300">
         <div class="flex justify-center items-center p-4">
-           <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+           <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
               <div class="p-6">
                  <div>
                     <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Streamline Inventory and Stock Management</h2>
@@ -662,7 +662,7 @@
     <div class="flex shrink-0 justify-around [gap:var(--gap)] animate-marquee3 flex-row group-hover:[animation-play-state:paused]">
       <div class="transform hover:-translate-y-2 transition duration-300">
         <div class="flex justify-center items-center p-4">
-          <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+          <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
               <div class="p-6">
                 <div>
                     <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Transform Communication with Unmatched Transparency</h2>
@@ -710,7 +710,7 @@
     </div>
         <div class="transform hover:-translate-y-2 transition duration-300">
            <div class="flex justify-center items-center p-4">
-              <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+              <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
                  <div class="p-6">
                     <div>
                        <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Take Project Management to the next level</h2>
@@ -758,7 +758,7 @@
         </div>
         <div class="transform hover:-translate-y-2 transition duration-300">
           <div class="flex justify-center items-center p-4">
-             <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+             <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
                 <div class="p-6">
                    <div>
                       <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Effortless Accounting, Real-Time Insights</h2>
@@ -807,7 +807,7 @@
        </div>
        <div class="transform hover:-translate-y-2 transition duration-300">
         <div class="flex justify-center items-center p-4">
-           <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+           <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
               <div class="p-6">
                  <div>
                     <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Streamline Inventory and Stock Management</h2>
@@ -860,7 +860,7 @@
     <div class="flex shrink-0 justify-around [gap:var(--gap)] animate-marquee3 flex-row group-hover:[animation-play-state:paused]">
       <div class="transform hover:-translate-y-2 transition duration-300">
         <div class="flex justify-center items-center p-4">
-          <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+          <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
               <div class="p-6">
                 <div>
                     <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Transform Communication with Unmatched Transparency</h2>
@@ -908,7 +908,7 @@
     </div>
         <div class="transform hover:-translate-y-2 transition duration-300">
            <div class="flex justify-center items-center p-4">
-              <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+              <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
                  <div class="p-6">
                     <div>
                        <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Take Project Management to the next level</h2>
@@ -956,7 +956,7 @@
         </div>
         <div class="transform hover:-translate-y-2 transition duration-300">
           <div class="flex justify-center items-center p-4">
-             <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+             <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
                 <div class="p-6">
                    <div>
                       <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Effortless Accounting, Real-Time Insights</h2>
@@ -1005,7 +1005,7 @@
        </div>
        <div class="transform hover:-translate-y-2 transition duration-300">
         <div class="flex justify-center items-center p-4">
-           <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+           <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
               <div class="p-6">
                  <div>
                     <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Streamline Inventory and Stock Management</h2>
@@ -1058,7 +1058,7 @@
     <div class="flex shrink-0 justify-around [gap:var(--gap)] animate-marquee3 flex-row group-hover:[animation-play-state:paused]">
       <div class="transform hover:-translate-y-2 transition duration-300">
         <div class="flex justify-center items-center p-4">
-          <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+          <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
               <div class="p-6">
                 <div>
                     <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Transform Communication with Unmatched Transparency</h2>
@@ -1106,7 +1106,7 @@
     </div>
         <div class="transform hover:-translate-y-2 transition duration-300">
            <div class="flex justify-center items-center p-4">
-              <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+              <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
                  <div class="p-6">
                     <div>
                        <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Take Project Management to the next level</h2>
@@ -1154,7 +1154,7 @@
         </div>
         <div class="transform hover:-translate-y-2 transition duration-300">
           <div class="flex justify-center items-center p-4">
-             <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+             <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
                 <div class="p-6">
                    <div>
                       <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Effortless Accounting, Real-Time Insights</h2>
@@ -1203,7 +1203,7 @@
        </div>
        <div class="transform hover:-translate-y-2 transition duration-300">
         <div class="flex justify-center items-center p-4">
-           <div class="w-full max-w-[700px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
+           <div class="w-full max-w-[600px] h-[408px] bg-gray-100 dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg">
               <div class="p-6">
                  <div>
                     <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Streamline Inventory and Stock Management</h2>
