rework: sorted out the invoice table

--- a/templates/main_app/invoice/index.html
+++ b/templates/main_app/invoice/index.html
@@ -3,33 +3,34 @@
 {% load custom_tags %}
 {% load static %}
 {% block content %}
-<h1 class="text-5xl font-bold pb-2">Invoices</h1>
-<table class="table-auto w-full">
-    <thead>
-      <tr class="bg-gray-500">
-        <th>ID</th>
-        <th>Description</th>
-        <th>Due</th>
-        <th>Total</th>
-        <th>Paid</th>
-      </tr>
-    </thead>
-    <tbody class="bg-white">
-        {% for invoice in total_invoices%}
-        <tr class="text-center">
-            <td>{{ invoice.uuid }}</td>
-            <td>{{ invoice.description }}</td>
-            <td>{{ invoice.due_date }}</td>
-            <td>{{ invoice.total }}</td>
-            <td>{{ invoice.paid }}</td>
-        </tr>
-        {% endfor %}
-        <tr class="text-center">
+  <div class="relative overflow-x-auto">
+    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+            <tr>
+              <th class="px-6 py-3">ID</th>
+              <th class="px-6 py-3">Description</th>
+              <th class="px-6 py-3">Due</th>
+              <th class="px-6 py-3">Total</th>
+              <th class="px-6 py-3">Paid</th>
+            </tr>
+        </thead>
+        <tbody>
+          {% for invoice in total_invoices%}
+          <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+              <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{invoice.uuid}}</td>
+              <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ invoice.description }}</td>
+              <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ invoice.due_date }}</td>
+              <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ invoice.total }}</td>
+              <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ invoice.paid }}</td>
+          </tr>
+          {% endfor %}
+          <tr class="text-center border-b bg-white dark:bg-gray-800 dark:border-gray-700">
             <td colspan="5"><a href="{% url 'main_app:invoicing:create' %}">+</a></td>
-        </tr>
-    </tbody>
-  </table>
+          </tr>
+        </tbody>
+    </table>
+  </div>
 {% endblock %}
 {% block scripts %}
-<script src={% static 'js/jquery.js' %}></script>
+  <script src={% static 'js/jquery.js' %}></script>
 {% endblock %}
