--- a/templates/main_app/invoice/create.html
+++ b/templates/main_app/invoice/create.html
@@ -4,39 +4,28 @@
 {% load custom_tags %}
 
 {% block content %}
-<h1 class="text-5xl font-bold text-center mb-6">Create invoice</h1>
-<table class="table-auto w-full" id="invoice_table">
-    <thead>
-      <tr class="bg-gray-500">
-        <th>#</th>
-        <th>Product</th>
-        <th>Description</th>
-        <th>Quantity</th>
-        <th>Rate</th>
-      </tr>
-    </thead>
-    <tbody class="bg-white" id='tbody'>
-        <tr class="text-center">
-            <td colspan="5"><button id='insert_row'>+</button></td>
+  <div class="relative overflow-x-auto">
+    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400" id="invoice_table">
+      <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+        <tr>
+          <th class="px-6 py-3">#</th>
+          <th class="px-6 py-3">Product</th>
+          <th class="px-6 py-3">Description</th>
+          <th class="px-6 py-3">Quantity</th>
+          <th class="px-6 py-3">Rate</th>
         </tr>
-        <tr class="text-center">
+      </thead>
+      <tbody id='tbody'>
+        <tr class="text-center border-b bg-white dark:bg-gray-800 dark:border-gray-700">
           <td colspan="5">
-            <div class="w-full flex md:flex-row flex-col p-3 justify-between">
-              <div class="md:w-1/3 w-full">
-                <a href="{% url 'main_app:invoicing:index' %}">
-                  <button class="w-full p-3 bg-gray-300 rounded-lg border-1 border-gray-400 hover:bg-gray-400 focus:bg-gray-500 transition ease-in-out duration-500">
-                    Cancel
-                  </button>
-                </a>
-              </div>
-              <div class="md:w-1/3 w-full">
-                <button action='submit' class="w-full p-3 bg-gray-300 rounded-lg border-1 border-gray-400 hover:bg-gray-400 focus:bg-gray-500 transition ease-in-out duration-500">Submit</button>
-              </div>
+            <div class="p-1">
+              <button class="px-2 py-1 rounded-full bg-pyrl-active text-white hover:bg-pyrl-200 hover:text-gray-900 transition ease-in-out duration-300 dark:bg-pyrl-200 dark:text-gray-900 hover:dark:bg-pyrl-active hover:dark:text-white" id='insert_row'>+</button>
             </div>
           </td>
         </tr>
-    </tbody>
-  </table>
+      </tbody>
+    </table>
+  </div>
 {% endblock %}
 {% block scripts %}
 <script src="{% static 'js/fun.js' %}"></script>
@@ -46,9 +35,10 @@
       var tbodyRef = document.getElementById('invoice_table').getElementsByTagName('tbody')[0];
       console.log(tbodyRef);
       var insertingHtml = `<td><p class="p-2 text-center font-semibold">${tbodyRef.rows.length - 1}</p></td>`;
-      var index = tbodyRef.rows.length - 2;
+      var index = tbodyRef.rows.length - 1;
       var newRow = tbodyRef.insertRow(index);
-      newRow.setAttribute("id", `fragment_id_${index + 2}`);
+      newRow.setAttribute("id", `fragment_id_${index + 1}`);
+      newRow.className += 'bg-white border-b dark:bg-gray-800 dark:border-gray-700'
       insertingHtml = insertingHtml + safeHtml
       console.log(insertingHtml);
       newRow.innerHTML = insertingHtml;
@@ -71,7 +61,6 @@
           headers: {'X-CSRFToken': $('input[name=csrfmiddlewaretoken]').val()},
           mode: 'same-origin', // Do not send CSRF token to another domain.
           success: function (data) {
-              console.log(data);
               add_row('#insert_row', data);
           }
       })
