--- a/templates/main_app/invoice/index.html
+++ b/templates/main_app/invoice/index.html
@@ -16,16 +16,20 @@
         </thead>
         <tbody>
           {% for invoice in total_invoices%}
-          <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-              <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{invoice.uuid}}</td>
-              <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ invoice.description }}</td>
-              <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ invoice.due_date }}</td>
-              <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ invoice.total }}</td>
-              <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ invoice.paid }}</td>
-          </tr>
+            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+                <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ invoice.uuid }}</td>
+                <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ invoice.description }}</td>
+                <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ invoice.due_date }}</td>
+                <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ invoice.total }}</td>
+                <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ invoice.paid }}</td>
+            </tr>
           {% endfor %}
           <tr class="text-center border-b bg-white dark:bg-gray-800 dark:border-gray-700">
-            <td colspan="5"><a href="{% url 'main_app:invoicing:create' %}">+</a></td>
+            <td colspan="5">
+              <div class="p-1">
+                <a class="px-2 py-1 rounded-full bg-pyrl-active text-white hover:bg-pyrl-200 hover:text-gray-900 transition ease-in-out duration-300 dark:bg-pyrl-200 dark:text-gray-900 hover:dark:bg-pyrl-active hover:dark:text-white " href="{% url 'main_app:invoicing:create' %}">+</a>
+              </div>
+            </td>
           </tr>
         </tbody>
     </table>
