--- a/templates/main_app/products/index.html
+++ b/templates/main_app/products/index.html
@@ -7,7 +7,7 @@
   {% for product in products %}
     <div class="w-full bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700" id="product-card-{{product.pid}}">
         <ul class="text-sm font-medium text-center text-gray-500 divide-x divide-gray-200 rounded-lg sm:flex dark:divide-gray-600 dark:text-gray-400 rtl:divide-x-reverse" id="fullWidthTab">
-            <h1 OnClick="display_product_form({{product.pid}})" class="inline-block w-full p-4 bg-gray-50 hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600 cursor-pointer">{{product.name}}</h1>
+            <h1 OnClick="display_product_form({{product.pid}})" class="inline-block w-full p-4 bg-gray-50 hover:bg-gray-300 hover:text-gray-900 dark:hover:text-gray-200 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600 cursor-pointer">{{product.name}}</h1>
         </ul>
         <div id="contents-{{product.pid}}">
         </div>
