--- a/templates/fragments/main_app/sidebar.html
+++ b/templates/fragments/main_app/sidebar.html
@@ -86,7 +86,7 @@
                 ></path>
               </svg>
               <span class="flex-1 ml-3 text-left whitespace-nowrap"
-                >Customers</span
+                >Customer</span
               >
               <svg
                 aria-hidden="true"
@@ -195,7 +195,7 @@
               </li>
             </ul>
           </li>
-          <li>
+          {% comment %} <li>
             <a
               href="#"
               class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
@@ -221,7 +221,7 @@
                 4
               </span>
             </a>
-          </li>
+          </li> {% endcomment %}
           <li>
             <button
               type="button"
