--- a/templates/main_app/invoice/create.html
+++ b/templates/main_app/invoice/create.html
@@ -8,18 +8,20 @@
     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400" id="invoice_table">
       <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
         <tr>
-          <th class="px-6 py-3">#</th>
-          <th class="px-6 py-3">Product</th>
-          <th class="px-6 py-3">Description</th>
-          <th class="px-6 py-3">Quantity</th>
-          <th class="px-6 py-3">Rate</th>
+          <th class="px-6 py-3 text-center">#</th>
+          <th class="px-6 py-3 text-center">Product</th>
+          <th class="px-6 py-3 text-center">Description</th>
+          <th class="px-6 py-3 text-center">Quantity</th>
+          <th class="px-6 py-3 text-center">Rate</th>
         </tr>
       </thead>
       <tbody id='tbody'>
         <tr class="text-center border-b bg-white dark:bg-gray-800 dark:border-gray-700">
-          <td colspan="5">
-            <div class="p-1">
-              <button class="px-2 py-1 rounded-full bg-pyrl-active text-white hover:bg-pyrl-200 hover:text-gray-900 transition ease-in-out duration-300 dark:bg-pyrl-200 dark:text-gray-900 hover:dark:bg-pyrl-active hover:dark:text-white" id='insert_row'>+</button>
+          <td colspan="5" class="h-[52.3333px]">
+            <div class="p-1 flex justify-between px-4">
+              <button class="px-2 pb-1 rounded-full bg-pyrl-active text-white hover:bg-pyrl-200 hover:text-gray-900 transition ease-in-out duration-300 dark:bg-pyrl-200 dark:text-gray-900 hover:dark:bg-pyrl-active hover:dark:text-white">x</button>
+              <button class="px-2 pb-1 rounded-full bg-pyrl-active text-white hover:bg-pyrl-200 hover:text-gray-900 transition ease-in-out duration-300 dark:bg-pyrl-200 dark:text-gray-900 hover:dark:bg-pyrl-active hover:dark:text-white" id='insert_row'>+</button>
+              <button class="px-2 pb-1 rounded-full bg-pyrl-active text-white hover:bg-pyrl-200 hover:text-gray-900 transition ease-in-out duration-300 dark:bg-pyrl-200 dark:text-gray-900 hover:dark:bg-pyrl-active hover:dark:text-white">></button>
             </div>
           </td>
         </tr>
