--- a/templates/fragments/main_app/sidebar.html
+++ b/templates/fragments/main_app/sidebar.html
@@ -181,6 +181,13 @@
               </li>
               <li>
                 <a
+                  href={% url 'main_app:products:categories' %}
+                  class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
+                  >Product Categories</a
+                >
+              </li>
+              <li>
+                <a
                   href="#"
                   class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                   >Billing</a
