--- a/templates/fragments/navbar.html
+++ b/templates/fragments/navbar.html
@@ -11,7 +11,7 @@
                     <a href={% url 'main_app:index' %} class="bg-gray-100 dark:bg-gray-700 dark:text-white dark:hover:text-black dark:hover:bg-gray-100 focus:shadow-inner hover:shadow-2xl py-2 px-4 text-gray-900 transition duration-300 ease-in-out hover:bg-gray-200">App</a>
                     <a href={% url 'user_management:logout' %} class="bg-gray-100 dark:bg-gray-700 dark:text-white dark:hover:text-black dark:hover:bg-gray-100 focus:shadow-inner hover:shadow-2xl py-2 px-4 text-gray-900 transition duration-300 ease-in-out hover:bg-gray-200">Logout</a>
                 {% else %}
-                    <a href={% url 'user_management:login_root' %} class="bg-gray-100 dark:bg-gray-700 dark:text-white dark:hover:text-black dark:hover:bg-gray-100 focus:shadow-inner hover:shadow-2xl py-2 px-4 text-gray-900 transition duration-300 ease-in-out hover:bg-gray-200">Login</a>
+                    <a href={% url 'user_management:login' %} class="bg-gray-100 dark:bg-gray-700 dark:text-white dark:hover:text-black dark:hover:bg-gray-100 focus:shadow-inner hover:shadow-2xl py-2 px-4 text-gray-900 transition duration-300 ease-in-out hover:bg-gray-200">Login</a>
                     <a href={% url 'user_management:signup' %} class="bg-gray-100 dark:bg-gray-700 dark:text-white dark:hover:text-black dark:hover:bg-gray-100 focus:shadow-inner hover:shadow-2xl py-2 px-4 text-gray-900 transition duration-300 ease-in-out hover:bg-gray-200">Signup</a>
                 {% endif %}
             </div>
