a lot of different things added, domain middleware, user context processors, custom function decorators (ajax identification) some new views, models etc

--- a/templates/main_app/invoice/index.html
+++ b/templates/main_app/invoice/index.html
@@ -27,7 +27,7 @@
           <tr class="text-center border-b bg-white dark:bg-gray-800 dark:border-gray-700">
             <td colspan="5" class="h-[52.3333px]">
               <div class="p-1">
-                <a class="px-2 py-1 rounded-full bg-pyrl-active text-white hover:bg-pyrl-200 hover:text-gray-900 transition ease-in-out duration-300 dark:bg-pyrl-200 dark:text-gray-900 hover:dark:bg-pyrl-active hover:dark:text-white " href="{% url 'main_app:invoicing:create' %}">+</a>
+                {% comment %} <a class="px-2 py-1 rounded-full bg-pyrl-active text-white hover:bg-pyrl-200 hover:text-gray-900 transition ease-in-out duration-300 dark:bg-pyrl-200 dark:text-gray-900 hover:dark:bg-pyrl-active hover:dark:text-white " href="{% url 'main_app:invoicing:create' %}">+</a> {% endcomment %}
               </div>
             </td>
           </tr>
