--- a/templates/fragments/main_app/sidebar.html
+++ b/templates/fragments/main_app/sidebar.html
@@ -86,7 +86,7 @@
                 ></path>
               </svg>
               <span class="flex-1 ml-3 text-left whitespace-nowrap"
-                >Customer</span
+                >Customers</span
               >
               <svg
                 aria-hidden="true"
@@ -126,7 +126,7 @@
               </li>
               <li>
                 <a
-                  href="{% url 'main_app:customer_management:index' %}"
+                  href="{% url 'main_app:customers:index' %}"
                   class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                   >Customers</a
                 >
