--- a/templates/main_app/customers/index.html
+++ b/templates/main_app/customers/index.html
@@ -4,7 +4,7 @@
     <div class="flex items-center justify-center p-2 min-w-full">
         <div class="flex flex-col border-gray-200 dark:border-gray-700 border bg-white dark:bg-gray-800 divide-y rounded-lg flex-none w-full">
             <div class="flex flex-col">
-                {% for customer in customers %}
+                {% for customer in customer %}
                 <!-- Item -->
                 <div class="group flex justify-between space-x-6 items-center p-6 cursor-pointer transition ease-in-out duration-300 hover:bg-gray-200 hover:shadow-inline dark:hover:shadow-none dark:hover:bg-gray-700">
                     
