--- a/templates/fragments/navbar.html
+++ b/templates/fragments/navbar.html
@@ -2,19 +2,10 @@
 {% load static %}
 <nav class="fixed top-0 w-full z-50">
     <nav class="bg-white border-gray-200 dark:bg-gray-900">
-        <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl p-4">
+        <div class="flex flex-wrap justify-between items-center max-w-screen-xl p-4">
             <a class="" href={% url 'base:index' %}>
                 {{'fill-current hover:text-pyrl-active ease-in-out duration-300 dark:text-white text-dark'|get_pyrl_logo}}
             </a>
-            <div class="flex items-center space-x-6 rtl:space-x-reverse">
-                {% if request.user.is_authenticated %}
-                    <a href={% url 'main_app:index' %} class="bg-gray-100 dark:bg-gray-700 dark:text-white dark:hover:text-black dark:hover:bg-gray-100 focus:shadow-inner hover:shadow-2xl py-2 px-4 text-gray-900 transition duration-300 ease-in-out hover:bg-gray-200">App</a>
-                    <a href={% url 'user_management:logout' %} class="bg-gray-100 dark:bg-gray-700 dark:text-white dark:hover:text-black dark:hover:bg-gray-100 focus:shadow-inner hover:shadow-2xl py-2 px-4 text-gray-900 transition duration-300 ease-in-out hover:bg-gray-200">Logout</a>
-                {% else %}
-                    <a href={% url 'user_management:login' %} class="bg-gray-100 dark:bg-gray-700 dark:text-white dark:hover:text-black dark:hover:bg-gray-100 focus:shadow-inner hover:shadow-2xl py-2 px-4 text-gray-900 transition duration-300 ease-in-out hover:bg-gray-200">Login</a>
-                    <a href={% url 'user_management:signup' %} class="bg-gray-100 dark:bg-gray-700 dark:text-white dark:hover:text-black dark:hover:bg-gray-100 focus:shadow-inner hover:shadow-2xl py-2 px-4 text-gray-900 transition duration-300 ease-in-out hover:bg-gray-200">Signup</a>
-                {% endif %}
-            </div>
         </div>
     </nav>
     <nav class="bg-gray-100 dark:bg-gray-700">
